rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef struct TransactionInner TransactionInner;
typedef struct YOptions {
  uint64_t id;
  const char *guid;
  const char *collection_id;
  uint8_t encoding;
  uint8_t skip_gc;
  uint8_t auto_load;
  uint8_t should_load;
} YOptions;
typedef YDoc YDoc;
typedef Branch Branch;
typedef YSubscription YSubscription;
typedef struct YStateVector {
  uint32_t entries_count;
  uint64_t *client_ids;
  uint32_t *clocks;
} YStateVector;
typedef struct YDeleteSet {
  uint32_t entries_count;
  uint64_t *client_ids;
  struct YIdRangeSeq *ranges;
} YDeleteSet;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
void ydoc_destroy(YDoc *value);
void ystring_destroy(char *str);
YDoc *ydoc_new_with_options(struct YOptions options);
uint64_t ydoc_id(YDoc *doc);
char *ydoc_guid(YDoc *doc);
char *ydoc_collection_id(YDoc *doc);
uint8_t ydoc_should_load(YDoc *doc);
uint8_t ydoc_auto_load(YDoc *doc);
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
void ydoc_load(YDoc *doc, YTransaction *parent_txn);
void ydoc_clear(YDoc *doc, YTransaction *parent_txn);
YTransaction *ydoc_read_transaction(YDoc *doc);
YTransaction *ydoc_write_transaction(YDoc *doc, uint32_t origin_len, const char *origin);
YDoc **ytransaction_subdocs(YTransaction *txn, uint32_t *len);
void ytransaction_commit(YTransaction *txn);
uint8_t ytransaction_writeable(YTransaction *txn);
Branch *ytype_get(YTransaction *txn, const char *name);
Branch *ytext(YDoc *doc, const char *name);
Branch *yarray(YDoc *doc,
               const char *name);
Branch *ymap(YDoc *doc, const char *name);
Branch *yxmlfragment(YDoc *doc, const char *name);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));