lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Creates a new [Doc] instance with a specified `options`.
///
/// Use [ydoc_destroy] in order to release created [Doc] resources.
@ffi.Native<ffi.Pointer<YDoc> Function(YOptions)>(
    symbol: 'ydoc_new_with_options', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YDoc> ydoc_new_with_options(
  YOptions options,
);

/// Returns a unique client identifier of this [Doc] instance.
@ffi.Native<ffi.Uint64 Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_id', assetId: 'package:y_dart/y_dart')
external int ydoc_id(
  ffi.Pointer<YDoc> doc,
);

/// Returns a unique document identifier of this [Doc] instance.
///
/// Generated string resources should be released using [ystring_destroy] function.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_guid', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ydoc_guid(
  ffi.Pointer<YDoc> doc,
);

/// Returns a collection identifier of this [Doc] instance.
/// If none was defined, a `NULL` will be returned.
///
/// Generated string resources should be released using [ystring_destroy] function.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_collection_id', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ydoc_collection_id(
  ffi.Pointer<YDoc> doc,
);

/// Returns status of should_load flag of this [Doc] instance, informing parent [Doc] if this
/// document instance requested a data load.
@ffi.Native<ffi.Uint8 Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_should_load', assetId: 'package:y_dart/y_dart')
external int ydoc_should_load(
  ffi.Pointer<YDoc> doc,
);

/// Returns status of auto_load flag of this [Doc] instance. Auto loaded sub-documents automatically
/// send a load request to their parent documents.
@ffi.Native<ffi.Uint8 Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_auto_load', assetId: 'package:y_dart/y_dart')
external int ydoc_auto_load(
  ffi.Pointer<YDoc> doc,
);

@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<YDoc>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                        ffi.Pointer<ffi.Char>)>>)>(
    symbol: 'ydoc_observe_updates_v1', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ydoc_observe_updates_v1(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Pointer<ffi.Char>)>>
      cb,
);

@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<YDoc>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                        ffi.Pointer<ffi.Char>)>>)>(
    symbol: 'ydoc_observe_updates_v2', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ydoc_observe_updates_v2(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Pointer<ffi.Char>)>>
      cb,
);

@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<YDoc>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<ffi.Void>,
                        ffi.Pointer<YAfterTransactionEvent>)>>)>(
    symbol: 'ydoc_observe_after_transaction', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ydoc_observe_after_transaction(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<YAfterTransactionEvent>)>>
      cb,
);

@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<YDoc>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YSubdocsEvent>)>>)>(
    symbol: 'ydoc_observe_subdocs', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ydoc_observe_subdocs(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<YSubdocsEvent>)>>
      cb,
);

@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<YDoc>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YDoc>)>>)>(
    symbol: 'ydoc_observe_clear', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ydoc_observe_clear(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<YDoc>)>>
      cb,
);

/// Manually send a load request to a parent document of this subdoc.
@ffi.Native<ffi.Void Function(ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>(
    symbol: 'ydoc_load', assetId: 'package:y_dart/y_dart')
external void ydoc_load(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<YTransaction> parent_txn,
);

/// Destroys current document, sending a 'destroy' event and clearing up all the event callbacks
/// registered.
@ffi.Native<ffi.Void Function(ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>(
    symbol: 'ydoc_clear', assetId: 'package:y_dart/y_dart')
external void ydoc_clear(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<YTransaction> parent_txn,
);

/// Starts a new read-only transaction on a given document. All other operations happen in context
/// of a transaction. Yrs transactions do not follow ACID rules. Once a set of operations is
/// complete, a transaction can be finished using `ytransaction_commit` function.
///
/// Returns `NULL` if read-only transaction couldn't be created, i.e. when another read-write
/// transaction is already opened.
@ffi.Native<ffi.Pointer<YTransaction> Function(ffi.Pointer<YDoc>)>(
    symbol: 'ydoc_read_transaction', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YTransaction> ydoc_read_transaction(
  ffi.Pointer<YDoc> doc,
);

/// Starts a new read-write transaction on a given document. All other operations happen in context
/// of a transaction. Yrs transactions do not follow ACID rules. Once a set of operations is
/// complete, a transaction can be finished using `ytransaction_commit` function.
///
/// `origin_len` and `origin` are optional parameters to specify a byte sequence used to mark
/// the origin of this transaction (eg. you may decide to give different origins for transaction
/// applying remote updates). These can be used by event handlers or `YUndoManager` to perform
/// specific actions. If origin should not be set, call `ydoc_write_transaction(doc, 0, NULL)`.
///
/// Returns `NULL` if read-write transaction couldn't be created, i.e. when another transaction is
/// already opened.
@ffi.Native<
        ffi.Pointer<YTransaction> Function(
            ffi.Pointer<YDoc>, ffi.Uint32, ffi.Pointer<ffi.Char>)>(
    symbol: 'ydoc_write_transaction', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YTransaction> ydoc_write_transaction(
  ffi.Pointer<YDoc> doc,
  int origin_len,
  ffi.Pointer<ffi.Char> origin,
);

/// Returns a list of subdocs existing within current document.
@ffi.Native<
        ffi.Pointer<ffi.Pointer<YDoc>> Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_subdocs', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Pointer<YDoc>> ytransaction_subdocs(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Uint32> len,
);

/// Commit and dispose provided read-write transaction. This operation releases allocated resources,
/// triggers update events and performs a storage compression over all operations executed in scope
/// of a current transaction.
@ffi.Native<ffi.Void Function(ffi.Pointer<YTransaction>)>(
    symbol: 'ytransaction_commit', assetId: 'package:y_dart/y_dart')
external void ytransaction_commit(
  ffi.Pointer<YTransaction> txn,
);

/// Returns `1` if current transaction is of read-write type.
/// Returns `0` if transaction is read-only.
@ffi.Native<ffi.Uint8 Function(ffi.Pointer<YTransaction>)>(
    symbol: 'ytransaction_writeable', assetId: 'package:y_dart/y_dart')
external int ytransaction_writeable(
  ffi.Pointer<YTransaction> txn,
);

/// Gets a reference to shared data type instance at the document root-level,
/// identified by its `name`, which must be a null-terminated UTF-8 compatible string.
///
/// Returns `NULL` if no such structure was defined in the document before.
@ffi.Native<
        ffi.Pointer<Branch> Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>(
    symbol: 'ytype_get', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> ytype_get(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> name,
);

/// Gets or creates a new shared `YText` data type instance as a root-level type of a given document.
/// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
/// compatible string.
@ffi.Native<
        ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>(
    symbol: 'ytext', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> ytext(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Char> name,
);

/// Gets or creates a new shared `YArray` data type instance as a root-level type of a given document.
/// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
/// compatible string.
///
/// Use [yarray_destroy] in order to release pointer returned that way - keep in mind that this will
/// not remove `YArray` instance from the document itself (once created it'll last for the entire
/// lifecycle of a document).
@ffi.Native<
        ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yarray', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yarray(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Char> name,
);

/// Gets or creates a new shared `YMap` data type instance as a root-level type of a given document.
/// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
/// compatible string.
///
/// Use [ymap_destroy] in order to release pointer returned that way - keep in mind that this will
/// not remove `YMap` instance from the document itself (once created it'll last for the entire
/// lifecycle of a document).
@ffi.Native<
        ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>(
    symbol: 'ymap', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> ymap(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Char> name,
);

/// Gets or creates a new shared `YXmlElement` data type instance as a root-level type of a given
/// document. This structure can later be accessed using its `name`, which must be a null-terminated
/// UTF-8 compatible string.
@ffi.Native<
        ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmlfragment', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmlfragment(
  ffi.Pointer<YDoc> doc,
  ffi.Pointer<ffi.Char> name,
);
